Rajout de la fonction de recherche
Fonction de recherche + Bouton Reset

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 			<a name="cat-deux" class="nav"><li>Catégorie 2</li></a>
 			<a name="cat-trois" class="nav"><li>Catégorie 3</li></a>
 		</ul>
+    <label for="search">Chercher un mot clé :</label>
+    <input type="text" name="search" id="search" placeholder="ex: webdesign">
+    <button name="search_btn" id="chercher">Chercher</button>
+    <button name="reset" type="reset" id="reset">Reset</button>
 	</nav>
 	<ul>
 
