Fix Sticky + Upper Page Button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr"  id="top">
 <head>
 	<title>Artificial Intelligence through the ages - A Timeline</title>
 	<meta charset="utf-8">
@@ -31,8 +31,9 @@
 		<div id="timeline"></div></main>
 	</ul>
 </div>
-</body>
 
+<a href="#top"><div  id="upper"></div></a>
+</body>
 
 
 <!--CDN JQuery-->
