--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<img src="{{{Src}}}">
 	<h3>{{{Titre}}}</h3>
 	<p>{{{Description}}}</p>
-	<h4><a href="{{{Lien}}}">En savoir plus</a></h4>
+	<h4><a href="{{{Lien}}}" target="_blank">En savoir plus</a></h4>
 	</li></div>
 </script>
 
